--- a/cardapio.html
+++ b/cardapio.html
@@ -171,11 +171,28 @@
 
     <div class="filtro filtro-nav">
         <select id="categoria">
-        <option value="todos">Todos</option>
-        <option value="entradas">Entradas e Petiscos</option>
-        <option value="carnes">Pratos Carnes</option>
-        <option value="bebidas">Bebidas</option>
-      </select>
+          <option value="todos">Todos</option>
+          <option value="entradas">Entradas e Petiscos</option>
+          <option value="pequeno-almoco">Pequeno Almoço</option>
+          <option value="carnes">Pratos Carnes</option>
+          <option value="massas">Massas Diverso</option>
+          <option value="bebidas">Bebidas</option>
+          <option value="cervejas">Cervejas Diversas</option>
+          <option value="cocktails">Cocktails</option>
+          <option value="cafe">Café</option>
+          <option value="champanhe">Champanhe</option>
+          <option value="whiskey-velho">Whiskey Velho Dose</option>
+          <option value="whiskey-novo">Whiskey Novo</option>
+          <option value="vinho-tinto">Vinho Tinto</option>
+          <option value="vinho-branco">Vinho Branco Verde</option>
+          <option value="vinho-rose">Vinho Rosé</option>
+          <option value="licores">Licores</option>
+          <option value="cognacs">Cognacs</option>
+          <option value="shots">Shots</option>
+          <option value="sangrias">Sangrias Diversas</option>
+          <option value="vodka-gin">Vodka & Gin</option>
+          <option value="aguardente">Aguardente</option>
+        </select>
       <button id="limpar-filtro" class="btn-filtro">Limpar</button>
     </div>
 
@@ -186,6 +203,8 @@
       <li><a href="pedidos.html">Pedidos</a></li>
       <li><a href="eventos.html">Eventos</a></li>
       <li><a href="contactos.html">Contactos</a></li>
+	  <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
+      <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
     </ul>
   </nav>
 
@@ -286,3 +305,4 @@
 </body>
 
 </html>
+
