--- a/index.html
+++ b/index.html
@@ -27,33 +27,17 @@
   <!-- Botão Opções (mobile) -->
   <button class="menu-toggle">Opções ☰</button>
 
-  <!-- Links desktop -->
+  <!-- Links (desktop + mobile controlados por CSS) -->
   <ul class="nav-links">
     <li><a href="cardapio.html">Cardápio</a></li>
-	 <li><a href="Pedidos.html">Pedidos</a></li>
+    <li><a href="pedidos.html">Pedidos</a></li>
     <li><a href="eventos.html">Eventos</a></li>
-    <li><a href="contactos.html">Contactos</a></li>   
+    <li><a href="contactos.html">Contactos</a></li>
     <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
     <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
     <li>
       <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer">
-        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;"></a>
-    </li>
-  </ul>
-
-  <!-- Menu mobile -->
-  <ul class="mobile-menu">
-    <li><a href="cardapio.html">Cardápio</a></li>
-	<li><a href="encomendas.html">Encomendas</a></li>
-    <li><a href="eventos.html">Eventos</a></li>
-    <li><a href="contactos.html">Contactos</a></li>   
-    <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-    <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-    <!-- Botão WhatsApp mobile -->
-    <li>
-      <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer">
-        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">
-        Posso ajudar?
+        <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">Posso ajudar?
       </a>
     </li>
   </ul>
@@ -166,3 +150,4 @@
 
 </body>
 </html>
+
