--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- Menu mobile -->
   <ul class="mobile-menu">
     <li><a href="cardapio.html">Cardápio</a></li>
-	<li><a href="encomendas.html">Encomendas</a></li>
+	<li><a href="pedidos.html">Pedidos</a></li>
     <li><a href="eventos.html">Eventos</a></li>
     <li><a href="contactos.html">Contactos</a></li>   
     <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
@@ -166,3 +166,4 @@
 
 </body>
 </html>
+
