--- a/cardapio.html
+++ b/cardapio.html
@@ -199,7 +199,7 @@
     <button class="menu-toggle">Opções ☰</button>
 
     <ul class="nav-links">
-      <li><a href="cardápio.html" class="active">Cardápio</a></li>
+      <li><a href="cardapio.html" class="active">Cardápio</a></li>
       <li><a href="pedidos.html">Pedidos</a></li>
       <li><a href="eventos.html">Eventos</a></li>
       <li><a href="contactos.html">Contactos</a></li>
@@ -210,7 +210,7 @@
 
   <!-- Menu mobile -->
   <ul class="mobile-menu">
-    <li><a href="cardápio.html" class="active">Cardápio</a></li>
+    <li><a href="cardapio.html" class="active">Cardápio</a></li>
     <li><a href="pedidos.html">Pedidos</a></li>
     <li><a href="eventos.html">Eventos</a></li>
     <li><a href="contactos.html">Contactos</a></li>
@@ -1656,6 +1656,7 @@
 </body>
 
 </html>
+
 
 
 
