--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Links desktop -->
   <ul class="nav-links">
     <li><a href="cardapio.html">Cardápio</a></li>
-	 <li><a href="Pedidos.html">Pedidos</a></li>
+	 <li><a href="pedidos.html">Pedidos</a></li>
     <li><a href="eventos.html">Eventos</a></li>
     <li><a href="contactos.html">Contactos</a></li>   
     <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
@@ -166,3 +166,4 @@
 
 </body>
 </html>
+
