--- a/eventos.html
+++ b/eventos.html
@@ -23,12 +23,12 @@
 
   <!-- Links desktop -->
   <ul class="nav-links">
-    <li><a href="menu.html">Menu</a></li>
-    <li><a href="encomendas.html">Encomendas</a></li>
-    <li><a href="eventos.html" class="active">Eventos</a></li>
-    <li><a href="contactos.html">Contactos</a></li>
-    <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
-    <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
+    <li><a href="cardapio.html">Cardápio</a></li>
+	  <li><a href="pedidos.html">Pedidos</a></li>
+    <li><a href="eventos.html">Eventos</a></li>
+    <li><a href="contactos.html">Contactos</a></li>   
+    <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+    <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
     <li>
       <a href="https://wa.me/244923281469" target="_blank">
         <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">
@@ -39,12 +39,12 @@
 
   <!-- Menu mobile -->
   <ul class="mobile-menu">
-    <li><a href="menu.html">Menu</a></li>
-    <li><a href="encomendas.html">Encomendas</a></li>
-    <li><a href="eventos.html" class="active">Eventos</a></li>
-    <li><a href="contactos.html">Contactos</a></li>
-    <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
-    <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
+    <li><a href="cardapio.html">Cardápio</a></li>
+	  <li><a href="pedidos.html">Pedidos</a></li>
+    <li><a href="eventos.html">Eventos</a></li>
+    <li><a href="contactos.html">Contactos</a></li>   
+    <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+    <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
     <li>
     <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer">
         <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;">Posso ajudar?</a>
@@ -121,5 +121,6 @@
 
 </body>
 </html>
+
 
 
