--- a/pedidos.html
+++ b/pedidos.html
@@ -61,14 +61,7 @@
 
     @media(max-width:768px){
       .nav-links{display:none;}
-      .menu-toggle {
-        display:block;
-        position:fixed;
-        bottom:20px;
-        right:20px;
-        z-index:1100;
-        border-radius:50px;
-      }
+      .menu-toggle { display:block; } /* visível apenas em mobile */
     }
 
     .mobile-menu {
@@ -152,7 +145,7 @@
       </a>
     </div>
 
-    <!-- Botão Opções -->
+    <!-- Botão Opções dentro da NAV -->
     <button class="menu-toggle">Opções ☰</button>
 
     <ul class="nav-links">
@@ -244,4 +237,3 @@
   </script>
 </body>
 </html>
-
