--- a/pedidos.html
+++ b/pedidos.html
@@ -234,6 +234,34 @@
     }
 
     atualizarCarrinho();
+
+     // Menu Mobile
+  const menuToggle = document.querySelector('.menu-toggle');
+  const mobileMenu = document.querySelector('.mobile-menu');
+
+  // Abre/fecha ao clicar no botão
+  menuToggle.addEventListener('click', () => {
+    if (mobileMenu.style.display === 'flex') {
+      mobileMenu.style.display = 'none';
+    } else {
+      mobileMenu.style.display = 'flex';
+    }
+  });
+
+  // Fecha ao clicar em qualquer link do menu
+  document.querySelectorAll('.mobile-menu a').forEach(link => {
+    link.addEventListener('click', () => {
+      mobileMenu.style.display = 'none';
+    });
+  });
+
+  // Fecha ao clicar fora do menu
+  document.addEventListener('click', (e) => {
+    if (mobileMenu.style.display === 'flex' && !mobileMenu.contains(e.target) && e.target !== menuToggle) {
+      mobileMenu.style.display = 'none';
+       }
+  });
   </script>
 </body>
 </html>
+
