--- a/pedidos.html
+++ b/pedidos.html
@@ -149,24 +149,28 @@
     <button class="menu-toggle">Opções ☰</button>
 
     <ul class="nav-links">
-      <li><a href="cardápio.html">Cardápio</a></li>
-      <li><a href="pedidos.html" class="active">Pedidos</a></li>
-      <li><a href="eventos.html">Eventos</a></li>
-      <li><a href="contactos.html">Contactos</a></li>
+    <li><a href="cardapio.html">Cardápio</a></li>
+	  <li><a href="pedidos.html">Pedidos</a></li>
+    <li><a href="eventos.html">Eventos</a></li>
+    <li><a href="contactos.html">Contactos</a></li>   
+    <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+    <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
     </ul>
   </nav>
 
   <!-- Menu mobile -->
   <ul class="mobile-menu">
-    <li><a href="cardápio.html">Cardápio</a></li>
-    <li><a href="pedidos.html" class="active">Pedidos</a></li>
+    <li><a href="cardapio.html">Cardápio</a></li>
+	  <li><a href="pedidos.html">Pedidos</a></li>
     <li><a href="eventos.html">Eventos</a></li>
-    <li><a href="contactos.html">Contactos</a></li>
+    <li><a href="contactos.html">Contactos</a></li>   
+    <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+    <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank" rel="noopener noreferrer">Facebook</a></li>
   </ul>
 
   <!-- Carrinho -->
   <div id="carrinho">
-    <h2>Seu Pedido</h2>
+    <h2>Pedido GEP</h2>
     <ul id="lista-carrinho"></ul>
     <p id="total">Total: 0,00 KZ</p>
     <div class="finalizar-container">
@@ -264,4 +268,5 @@
   </script>
 </body>
 </html>
+
 
