--- a/cardapio.html
+++ b/cardapio.html
@@ -108,7 +108,7 @@
       gap:15px;
       background:#111;
       padding:15px;
-      position:absolute;
+      position:fixed;
       top:65px;
       left:0;
       width:100%;
@@ -1656,6 +1656,7 @@
 </body>
 
 </html>
+
 
 
 
