--- a/cardapio.html
+++ b/cardapio.html
@@ -205,17 +205,21 @@
       <li><a href="contactos.html">Contactos</a></li>
 	  <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
       <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
+	  <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer">
+      <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;"></a>
     </ul>
   </nav>
 
   <!-- Menu mobile -->
   <ul class="mobile-menu">
-    <li><a href="cardapio.html" class="active">Cardápio</a></li>
-    <li><a href="pedidos.html">Pedidos</a></li>
-    <li><a href="eventos.html">Eventos</a></li>
-    <li><a href="contactos.html">Contactos</a></li>
-	<li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
-    <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
+     <li><a href="cardapio.html" class="active">Cardápio</a></li>
+      <li><a href="pedidos.html">Pedidos</a></li>
+      <li><a href="eventos.html">Eventos</a></li>
+      <li><a href="contactos.html">Contactos</a></li>
+	  <li><a href="https://www.instagram.com/geprestaurantegrill/" target="_blank">Instagram</a></li>
+      <li><a href="https://www.facebook.com/GEPRESTAURANTEGRILL/?locale=pt_BR" target="_blank">Facebook</a></li>
+	  <a href="https://wa.me/244923281469" target="_blank" rel="noopener noreferrer">
+      <img src="imagens/whatsapp-logo.jpg" alt="Posso ajudar?" style="height:18px;vertical-align:middle;margin-right:6px;"></a>
   </ul>
 
   <!-- Produtos -->
@@ -1656,6 +1660,7 @@
 </body>
 
 </html>
+
 
 
 
