--- a/cardapio.html
+++ b/cardapio.html
@@ -170,16 +170,16 @@
     </div>
 
     <div class="filtro filtro-nav">
-        <select id="categoria">
+         <select id="categoria">
           <option value="todos">Todos</option>
           <option value="entradas">Entradas e Petiscos</option>
           <option value="pequeno-almoco">Pequeno Almoço</option>
           <option value="carnes">Pratos Carnes</option>
           <option value="massas">Massas Diverso</option>
           <option value="bebidas">Bebidas</option>
+		  <option value="bebidas-quentes">Bebidas Quentes</option>
           <option value="cervejas">Cervejas Diversas</option>
           <option value="cocktails">Cocktails</option>
-          <option value="cafe">Café</option>
           <option value="champanhe">Champanhe</option>
           <option value="whiskey-velho">Whiskey Velho Dose</option>
           <option value="whiskey-novo">Whiskey Novo</option>
@@ -190,7 +190,6 @@
           <option value="cognacs">Cognacs</option>
           <option value="shots">Shots</option>
           <option value="sangrias">Sangrias Diversas</option>
-          <option value="vodka-gin">Vodka & Gin</option>
           <option value="aguardente">Aguardente</option>
         </select>
       <button id="limpar-filtro" class="btn-filtro">Limpar</button>
@@ -223,7 +222,7 @@
   </ul>
 
   <!-- Produtos -->
-  <main>
+   <main>
     <div class="product" data-categoria="entradas">
     <img src="imagens/gambas-panados.jpg" alt="Gambas Panados">
     <h3>Gambas Panados</h3>
@@ -362,7 +361,7 @@
 
  <!-- Pequeno Almoço -->
  
-  <div class="product" data-categoria="matabicho">
+  <div class="product" data-categoria="pequeno-almoco">
     <img src="imagens/omelete-composto.jpg" alt="Omelete Composto">
     <h3>Omelete Composto</h3>
     <div class="price" data-preco="2890">2.890,00 KZ</div>
@@ -370,7 +369,7 @@
     <div class="sugestao" id="sug001"></div>
   </div>
 
-  <div class="product" data-categoria="matabicho">
+  <div class="product" data-categoria="pequeno-almoco">
     <img src="imagens/prego-prato.jpg" alt="Prego no Prato">
     <h3>Prego no Prato</h3>
     <div class="price" data-preco="9890">9.890,00 KZ</div>
@@ -378,7 +377,7 @@
     <div class="sugestao" id="sug002"></div>
   </div>
 
-  <div class="product" data-categoria="matabicho">
+  <div class="product" data-categoria="pequeno-almoco">
     <img src="imagens/bifanas-prato.jpg" alt="Bifanas no Prato">
     <h3>Bifanas no Prato</h3>
     <div class="price" data-preco="9789">9.789,00 KZ</div>
@@ -386,7 +385,7 @@
     <div class="sugestao" id="sug003"></div>
   </div>
 
-  <div class="product" data-categoria="matabicho">
+  <div class="product" data-categoria="pequeno-almoco">
     <img src="imagens/sopa-feijao.jpg" alt="Sopa de Feijão">
     <h3>Sopa de Feijão</h3>
     <div class="price" data-preco="2890">2.890,00 KZ</div>
@@ -394,7 +393,7 @@
     <div class="sugestao" id="sug004"></div>
   </div>
 
-  <div class="product" data-categoria="matabicho">
+  <div class="product" data-categoria="pequeno-almoco">
     <img src="imagens/sopa-legumes.jpg" alt="Sopa de Legumes">
     <h3>Sopa de Legumes</h3>
     <div class="price" data-preco="3990">3.990,00 KZ</div>
@@ -1011,7 +1010,7 @@
 
   <!-- Whiskey Velho Dose -->
   
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="whiskey-velho">
     <img src="imagens/blue-label.jpg" alt="Blue Label">
     <h3>Blue Label</h3>
     <div class="price" data-preco="18890">18.890,00 KZ</div>
@@ -1019,7 +1018,7 @@
     <div class="sugestao" id="sug001"></div>
   </div>
 
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="whiskey-velho">
     <img src="imagens/green-label.jpg" alt="Green Label">
     <h3>Green Label</h3>
     <div class="price" data-preco="18890">18.890,00 KZ</div>
@@ -1027,7 +1026,7 @@
     <div class="sugestao" id="sug002"></div>
   </div>
 
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="whiskey-velho">
     <img src="imagens/gold-label.jpg" alt="Gold Label">
     <h3>Gold Label</h3>
     <div class="price" data-preco="17890">17.890,00 KZ</div>
@@ -1035,7 +1034,7 @@
     <div class="sugestao" id="sug003"></div>
   </div>
 
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="whiskey-velho>
     <img src="imagens/platino-label.jpg" alt="Platino Label">
     <h3>Platino Label</h3>
     <div class="price" data-preco="16890">16.890,00 KZ</div>
@@ -1043,7 +1042,7 @@
     <div class="sugestao" id="sug004"></div>
   </div>
 
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="whiskey-velho">
     <img src="imagens/double-black.jpg" alt="Double Black">
     <h3>Double Black</h3>
     <div class="price" data-preco="11890">11.890,00 KZ</div>
@@ -1051,7 +1050,7 @@
     <div class="sugestao" id="sug005"></div>
   </div>
 
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="whiskey-velho">
     <img src="imagens/jameson-black.jpg" alt="Jameson Black">
     <h3>Jameson Black</h3>
     <div class="price" data-preco="6999">6.999,00 KZ</div>
@@ -1059,7 +1058,7 @@
     <div class="sugestao" id="sug006"></div>
   </div>
 
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="whiskey-velho">
     <img src="imagens/chivas.jpg" alt="Chivas">
     <h3>Chivas</h3>
     <div class="price" data-preco="7129">7.129,00 KZ</div>
@@ -1067,7 +1066,7 @@
     <div class="sugestao" id="sug007"></div>
   </div>
 
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="whiskey-velho">
     <img src="imagens/ballantines.jpg" alt="Ballantines">
     <h3>Ballantines</h3>
     <div class="price" data-preco="8920">8.920,00 KZ</div>
@@ -1077,7 +1076,7 @@
   
     <!-- Whiskey Novo -->
 	
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="Whiskey-Novo">
     <img src="imagens/jameson.jpg" alt="Jameson">
     <h3>Jameson</h3>
     <div class="price" data-preco="5478">5.478,00 KZ</div>
@@ -1085,7 +1084,7 @@
     <div class="sugestao" id="sug009"></div>
   </div>
 
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="Whiskey-Novo">
     <img src="imagens/red-label.jpg" alt="Red Label">
     <h3>Red Label</h3>
     <div class="price" data-preco="5230">5.230,00 KZ</div>
@@ -1093,7 +1092,7 @@
     <div class="sugestao" id="sug010"></div>
   </div>
 
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="Whiskey-Novo">
     <img src="imagens/whiskey-cola.jpg" alt="Whiskey-Cola">
     <h3>Whiskey-Cola</h3>
     <div class="price" data-preco="6270">6.270,00 KZ</div>
@@ -1101,7 +1100,7 @@
     <div class="sugestao" id="sug011"></div>
   </div>
 
-  <div class="product" data-categoria="whiskey">
+  <div class="product" data-categoria="Whiskey-Novo">
     <img src="imagens/blonde.jpg" alt="Blonde">
     <h3>Blonde</h3>
     <div class="price" data-preco="5200">5.200,00 KZ</div>
@@ -1111,7 +1110,7 @@
 
   <!-- Vinhos Tinto -->
   
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/cartuxa.jpg" alt="Cartuxa">
     <h3>Cartuxa</h3>
     <div class="price" data-preco="53382">53.382,00 KZ</div>
@@ -1119,7 +1118,7 @@
     <div class="sugestao" id="sug001"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/monte-velho.jpg" alt="Monte Velho">
     <h3>Monte Velho</h3>
     <div class="price" data-preco="16890">16.890,00 KZ</div>
@@ -1127,7 +1126,7 @@
     <div class="sugestao" id="sug002"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/palmela.jpg" alt="Palmela">
     <h3>Palmela</h3>
     <div class="price" data-preco="29949">29.949,00 KZ</div>
@@ -1135,7 +1134,7 @@
     <div class="sugestao" id="sug003"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/silk-spice.jpg" alt="Silk-Spice">
     <h3>Silk-Spice</h3>
     <div class="price" data-preco="35990">35.990,00 KZ</div>
@@ -1143,7 +1142,7 @@
     <div class="sugestao" id="sug004"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/vinho-casinha.jpg" alt="Vinho da Casinha">
     <h3>Vinho da Casinha</h3>
     <div class="price" data-preco="22000">22.000,00 KZ</div>
@@ -1151,7 +1150,7 @@
     <div class="sugestao" id="sug005"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/amicone.jpg" alt="Amicone">
     <h3>Amicone</h3>
     <div class="price" data-preco="62500">62.500,00 KZ</div>
@@ -1159,7 +1158,7 @@
     <div class="sugestao" id="sug006"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/arcos-marques.jpg" alt="Arcos do Marquês">
     <h3>Arcos do Marquês</h3>
     <div class="price" data-preco="35000">35.000,00 KZ</div>
@@ -1167,7 +1166,7 @@
     <div class="sugestao" id="sug007"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/duas-quintas.jpg" alt="Duas Quintas">
     <h3>Duas Quintas</h3>
     <div class="price" data-preco="45980">45.980,00 KZ</div>
@@ -1175,7 +1174,7 @@
     <div class="sugestao" id="sug008"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/esteva.jpg" alt="Esteva">
     <h3>Esteva</h3>
     <div class="price" data-preco="22890">22.890,00 KZ</div>
@@ -1183,7 +1182,7 @@
     <div class="sugestao" id="sug009"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/ferreira.jpg" alt="Ferreira">
     <h3>Ferreira</h3>
     <div class="price" data-preco="39980">39.980,00 KZ</div>
@@ -1191,7 +1190,7 @@
     <div class="sugestao" id="sug010"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/mariana-tinto.jpg" alt="Mariana Tinto">
     <h3>Mariana Tinto</h3>
     <div class="price" data-preco="26890">26.890,00 KZ</div>
@@ -1199,7 +1198,7 @@
     <div class="sugestao" id="sug011"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/marques-borba.jpg" alt="Marquês de Borba">
     <h3>Marquês de Borba</h3>
     <div class="price" data-preco="32890">32.890,00 KZ</div>
@@ -1207,7 +1206,7 @@
     <div class="sugestao" id="sug012"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/nederburg.jpg" alt="Nederburg">
     <h3>Nederburg</h3>
     <div class="price" data-preco="25790">25.790,00 KZ</div>
@@ -1215,7 +1214,7 @@
     <div class="sugestao" id="sug013"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/papa-figo.jpg" alt="Papa Figo">
     <h3>Papa Figo</h3>
     <div class="price" data-preco="35890">35.890,00 KZ</div>
@@ -1223,7 +1222,7 @@
     <div class="sugestao" id="sug014"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-tinto">
     <img src="imagens/paulo-louriano.jpg" alt="Paulo Louriano">
     <h3>Paulo Louriano</h3>
     <div class="price" data-preco="21890">21.890,00 KZ</div>
@@ -1233,7 +1232,7 @@
 
   <!-- Vinhos Branco | Verde -->
   
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-branco">
     <img src="imagens/mariana-branco.jpg" alt="Mariana Branco">
     <h3>Mariana Branco</h3>
     <div class="price" data-preco="26789">26.789,00 KZ</div>
@@ -1241,7 +1240,7 @@
     <div class="sugestao" id="sug016"></div>
   </div>
 
-   <div class="product" data-categoria="vinhos">
+   <div class="product" data-categoria="vinho-branco">
     <img src="imagens/casal-garcia.jpg" alt="Casal Garcia">
     <h3>Casal Garcia</h3>
     <div class="price" data-preco="25700">25.700,00 KZ</div>
@@ -1249,7 +1248,7 @@
     <div class="sugestao" id="sug017"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-branco">
     <img src="imagens/gazela.jpg" alt="Gazela">
     <h3>Gazela</h3>
     <div class="price" data-preco="22730">22.730,00 KZ</div>
@@ -1257,7 +1256,7 @@
     <div class="sugestao" id="sug018"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-branco">
     <img src="imagens/planalto.jpg" alt="Planalto">
     <h3>Planalto</h3>
     <div class="price" data-preco="22890">22.890,00 KZ</div>
@@ -1265,7 +1264,7 @@
     <div class="sugestao" id="sug019"></div>
   </div>
   
-    <div class="product" data-categoria="vinhos">
+    <div class="product" data-categoria="vinho-branco">
     <img src="imagens/mateus-rose.jpg" alt="Mateus Rosé">
     <h3>Mateus Rosé</h3>
     <div class="price" data-preco="18920">18.920,00 KZ</div>
@@ -1273,7 +1272,7 @@
     <div class="sugestao" id="sug020"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-branco">
     <img src="imagens/quinta-ferreira.jpg" alt="Quinta da Ferreira">
     <h3>Quinta da Ferreira</h3>
     <div class="price" data-preco="22340">22.340,00 KZ</div>
@@ -1281,7 +1280,7 @@
     <div class="sugestao" id="sug021"></div>
   </div>
 
-  <div class="product" data-categoria="vinhos">
+  <div class="product" data-categoria="vinho-branco">
     <img src="imagens/terra-demo.jpg" alt="Terra do Demo">
     <h3>Terra do Demo</h3>
     <div class="price" data-preco="55000">55.000,00 KZ</div>
@@ -1589,7 +1588,6 @@
     <div class="sugestao" id="sug016"></div>
   </div>
   </main>
-
   <script>
     // ===== Menu Mobile toggle =====
     const menuToggle = document.querySelector('.menu-toggle');
@@ -1660,6 +1658,7 @@
 </body>
 
 </html>
+
 
 
 
