--- a/eventos.html
+++ b/eventos.html
@@ -58,10 +58,9 @@
     <h2>Eventos</h2>
     <p>Descobre os eventos especiais e noites temáticas do GEP Restaurante.</p>
     <div class="galeria">
-      <img src="imagens/evento1.jpg" alt="Noite de Música ao Vivo">
-      <img src="imagens/evento2.jpg" alt="Festival Gastronómico">
-      <img src="imagens/evento3.jpg" alt="Aniversário GEP">
-    </div>
+      <img src="imagens/evento1.jpg" alt="Sunset">
+      <img src="imagens/evento2.jpg" alt="Encontro">
+    
   </section>
 </main>
 
@@ -121,6 +120,7 @@
 
 </body>
 </html>
+
 
 
 
