--- a/cardapio.html
+++ b/cardapio.html
@@ -157,6 +157,16 @@
       color:#fff;
       transform:scale(1.05);
     }
+
+	  .product img {
+  width: 100%;              /* ocupa toda a largura do card */
+  height: 250px;            /* altura fixa para padronizar */
+  object-fit: contain;      /* mostra a imagem inteira sem cortes */
+  background-color: #000;   /* fundo preto elegante */
+  border-radius: 10px;      /* cantos arredondados */
+  display: block;
+}
+
   </style>
 </head>
 <body>
@@ -1658,6 +1668,7 @@
 </body>
 
 </html>
+
 
 
 
