--- a/cardapio.html
+++ b/cardapio.html
@@ -158,14 +158,16 @@
       transform:scale(1.05);
     }
 
-	  .product img {
-  width: 100%;              /* ocupa toda a largura do card */
-  height: 250px;            /* altura fixa para padronizar */
-  object-fit: contain;      /* mostra a imagem inteira sem cortes */
-  background-color: #000;   /* fundo preto elegante */
-  border-radius: 10px;      /* cantos arredondados */
+	.product img {
+  width: 100%;
+  height: 250px;                /* altura fixa para padronizar */
+  object-fit: contain;          /* mostra a imagem inteira sem cortes */
+  background: linear-gradient(135deg, #FFD700, #FF4C4C); /* gradient institucional */
+  border-radius: 10px;
   display: block;
+  padding: 8px;                 /* espaço interno para destacar a imagem */
 }
+
 
   </style>
 </head>
@@ -1668,6 +1670,7 @@
 </body>
 
 </html>
+
 
 
 
